2006-07-14  Roger Leigh  <rleigh@debian.org>

	* schroot/schroot.conf.5.in: Minor whitespace cleanup.

	* TODO: Remove completed item.

	* Updated British English translation.

	* Apply quoting style to all sources.

	* HACKING: Document quoting style for format strings.

2006-07-14  Roger Leigh  <rleigh@debian.org>

	* HACKING: Document how to build the printed documentation.

	* Makefile.am: Add ps and pdf phony targets.

	* doc/Makefile.am: Add rules to make PS and PDF manuals.

2006-07-14  Roger Leigh  <rleigh@debian.org>

	* Update all documentation to use the style guidelines.

	* Makefile.am: Distribute HACKING.

	* HACKING: New file.  Document manual page style guidelines.

2006-07-13  Roger Leigh  <rleigh@debian.org>

	* Update sources to use new header.

	* sbuild/Makefile.am: Add sbuild-null.(cc|h).

	* sbuild/sbuild-null.(cc|h): New file.  Split out null class from
	sbuild/sbuild-error.h

2006-07-13  Roger Leigh  <rleigh@debian.org>

	* TODO: Remove completed error string markup item.

	* Add boost::format markup to error strings.

	* sbuild/sbuild-custom-error.h: All constructor detail arguments
	are now templated.  Add additional constructors for multiple detail
	arguments.

2006-07-13  Roger Leigh  <rleigh@debian.org>

	* sbuild/sbuild-chroot.h: API documentation corrections.

	* sbuild/sbuild-chroot.cc
	(set_persona): New overloaded function to set the personality by
	name.
	(set_keyfile): Set the personality using
	keyfile::get_object_value.

2006-07-13  Roger Leigh  <rleigh@debian.org>

	* All sources use error<> in place of custom_error_base<>, and
	std::runtime_error in place of runtime_error.

	* sbuild/sbuild-error.tcc: Renamed from sbuild-custom-error.tcc.

	* sbuild/sbuild-error.h: Remove runtime_error.  Move
	custom_error_base from sbuild/custom-error.h and rename to error.

2006-07-13  Roger Leigh  <rleigh@debian.org>

	* test/sbuild-parse-value.cc: Use sbuild::parse_value_error in
	place of sbuild::parse_error.
